<resources>
    <string name="app_name">TrivialTrivia</string>
    <string name="btnLogin">Login</string>
    <string name="txtLogin">LOGIN</string>
    <string name="btn_startGame">Start Game</string>
    <string name="txt_lobby">Lobby</string>
    <string name="txt_points">Points:</string>
    <string name="txt_finalsScores">The final scores are</string>
    <string name="btn_newGame">New Game</string>

    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be more than 6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="buttonLogin">Login</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="textLoginHeader">LOGIN</string>
    <string name="textRegister">Register</string>
    <string name="textForgotPassword">Forgot Password?</string>
    <string name="textAppName" translatable="false">Trivial Trivia</string>
    <string name="editTextUsername">Username</string>
    <string name="buttonRegister">Register User</string>
    <string name="textWelcomeHeaderProfile">Welcome</string>
    <string name="buttonLogOut">Log Out</string>
    <string name="textUserGreeting">Test</string>
    <string name="buttonResetPassword">Reset Password</string>
    <string name="buttonCreateGame">Create</string>
    <string name="buttonJoinGame">Join</string>
    <string name="textGameSettingsHeader">Game Settings</string>
    <string name="textNumberOfRounds">Rounds:</string>
    <string name="textNumberOfSeconds">Time in Seconds:</string>
    <string name="buttonHostGame">Host Game</string>
    <string name="editTextGameName" />
    <string name="dropDownDifficulty"></string>
    <string name="dropDownCategory"></string>
    <string name="txtAvailableGames">Available Games</string>
    <string name="buttonBack">Back</string>
    <string name="btn_leave">Leave</string>
    <string name="buttonLeaveActiveGave">Leave</string>
    <string name="textScoreActiveGame">Score</string>
    <string name="activeQuiz">A new quiz is happening!</string>
    <string name="textCategoryBanner">Category</string>
    <string name="textTimeLeft" translatable="false">0</string>
    <string name="textCurrentRound"></string>
    <string name="buttonNextQuestion">Next Question</string>
    <string name="quizUpdateInfo">A %s quiz about %s</string>





</resources>